# model_car_remote

./: .gitignore  CMakeLists.txt  README.md  start_ota.sh
.devcontainer/: Dockerfile  devcontainer.json
main/: CMakeLists.txt  Kconfig.projbuild  httpd.c  httpd.h  index.html.txt  main.c  modelcar.c  modelcar.h
main/wifi-captive-portal/: wifi-captive-portal-esp-idf-dns.c  wifi-captive-portal-esp-idf-dns.h  wifi-captive-portal-esp-idf-httpd.c  wifi-captive-portal-esp-idf-httpd.h
