idf_component_register(SRCS "main.c"
                            "modelcar.c"
                            "httpd.c"
                            "wifi-captive-portal/wifi-captive-portal-esp-idf-dns.c"
                            "wifi-captive-portal/wifi-captive-portal-esp-idf-httpd.c"
                    INCLUDE_DIRS ".")
